react-burger/src/components/BurgerConstructor/styles.module.css
.constructor_section {
  display: grid;
  max-width: max-content;
  width: 600px;
  align-self: start;
  justify-self: start;
}

.constructor_container {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.constructor_footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.constructor_drag_item {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
}

.price-block {
  width: fit-content;
}

